# tiburon_tasks

./: .gitignore  README.md
Task 1/: q1.py
Task 1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Task 1/log/: latest_build
bag/rosbag2_2025_10_28-00_38_06/: metadata.yaml  rosbag2_2025_10_28-00_38_06_0.db3
bag/rosbag2_2025_10_28-01_34_50/: metadata.yaml  rosbag2_2025_10_28-01_34_50_0.db3
bag/rosbag2_2025_10_31-19_28_32/: metadata.yaml  rosbag2_2025_10_31-19_28_32_0.db3
bag/rosbag2_2025_10_31-19_30_02/: rosbag2_2025_10_31-19_30_02_0.db3
bag/rosbag2_2025_10_31-19_34_00/: metadata.yaml  rosbag2_2025_10_31-19_34_00_0.db3
bag/rosbag2_2025_10_31-20_58_56/: rosbag2_2025_10_31-20_58_56_0.db3
src/: q1.py  q2.py
src/tasks/: package.xml  setup.py
src/tasks/tasks/: q1.py  q2.py  q3_client.py  q3_server.py  q4.py
src/tasks_msgs/: CMakeLists.txt  package.xml
src/tasks_msgs/srv/: DrawShape.srv
