<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tasks_msgs</name>
  <version>0.0.0</version>
  <description>Custom service definitions for the tasks package.</description>
  <maintainer email="dipankarghosh2006@gmail.com">dipankar</maintainer>
  <license>TODO: License declaration</license>

  <!-- This tells colcon to use CMake -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- This is required to find geometry_msgs -->
  <build_depend>geometry_msgs</build_depend>

  <!-- These lines are required for building .srv files -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- This MUST be 'ament_cmake' -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

